# hs-connect4

./: LICENSE  README.md  hs-connect4.cabal
app/: Main.hs
src/: Connect4.hs
src/Connect4/: Internal.hs
test/Connect4/: Connect4Spec.hs
