name:                hs-connect4
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/https://github.com/NorbertoBurciaga/hs-connect4#readme
license:             BSD3
license-file:        LICENSE
author:              Norberto Burciaga
maintainer:          norberto.burciaga@nbsis.com
copyright:           Norberto Burciaga @2019
category:            Software
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Connect4
                     , Connect4.Internal
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , vector
  default-language:    Haskell2010

executable hs-connect4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-connect4
  default-language:    Haskell2010

test-suite hs-connect4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-connect4
                     , hspec
                     , matrix
                     , vector
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/https://github.com/NorbertoBurciaga/hs-connect4
